--- a/FrontEnd/ionic.config.json
+++ b/FrontEnd/ionic.config.json
@@ -1,5 +1,11 @@
 {
   "name": "FrontEnd",
   "integrations": {},
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://192.168.100.10:8100/api"
+    }
+  ]
 }
