--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,8 @@
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "@okta/okta-auth-js": "^2.2.0",
+    "angular-oauth2-oidc": "^5.0.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
