--- a/FrontEnd/ionic.config.json
+++ b/FrontEnd/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "FrontEnd",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "ionic-angular",
   "proxies": [
     {
