--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "^4.15.0",
-    "@ionic-native/splash-screen": "~4.15.0",
+    "@ionic-native/splash-screen": "^4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
     "@okta/okta-auth-js": "^2.2.0",
     "angular-oauth2-oidc": "^5.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
@@ -38,5 +39,10 @@
     "@ionic/lab": "1.0.13",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-splashscreen": {}
+    }
+  }
 }
