--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "@okta/okta-auth-js": "^2.2.0",
     "angular-oauth2-oidc": "^5.0.2",
     "cordova-android": "7.1.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
@@ -41,7 +42,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.1",
     "@ionic/lab": "1.0.13",
     "typescript": "~2.6.2"
   },
@@ -58,7 +59,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
